CSCEXAM-000 Fix weird problems with CalendarControllerTest