@@ -28,7 +28,6 @@ import java.util.Collection;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.Random;
 import java.util.Set;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.TimeUnit;
@@ -104,7 +103,8 @@ public class EnrolmentController extends BaseController {
 
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public Result listEnrolledExams(String code) {
-        List<Exam> exams = DB.find(Exam.class)
+        List<Exam> exams = DB
+            .find(Exam.class)
             .fetch("creator", "firstName, lastName")
             .fetch("examLanguages")
             .fetch("examOwners", "firstName, lastName")
@@ -122,7 +122,8 @@ public class EnrolmentController extends BaseController {
 
     @Restrict({ @Group("ADMIN") })
     public Result enrolmentsByReservation(Long id) {
-        List<ExamEnrolment> enrolments = DB.find(ExamEnrolment.class)
+        List<ExamEnrolment> enrolments = DB
+            .find(ExamEnrolment.class)
             .fetch("user", "firstName, lastName, email")
             .fetch("exam")
             .fetch("exam.course", "code, name")
@@ -136,7 +137,8 @@ public class EnrolmentController extends BaseController {
 
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public Result getEnrolledExamInfo(String code, Long id) {
-        Exam exam = DB.find(Exam.class)
+        Exam exam = DB
+            .find(Exam.class)
             .fetch("course")
             .fetch("course.organisation")
             .fetch("course.gradeScale")
@@ -186,7 +188,8 @@ public class EnrolmentController extends BaseController {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
         if (isAllowedToParticipate(exam, user)) {
             DateTime now = dateTimeHandler.adjustDST(new DateTime());
-            List<ExamEnrolment> enrolments = DB.find(ExamEnrolment.class)
+            List<ExamEnrolment> enrolments = DB
+                .find(ExamEnrolment.class)
                 .where()
                 .eq("user", user)
                 .eq("exam.id", id)
@@ -259,7 +262,8 @@ public class EnrolmentController extends BaseController {
     }
 
     private Optional<Exam> getExam(Long eid, ExamExecutionType.Type type) {
-        return DB.find(Exam.class)
+        return DB
+            .find(Exam.class)
             .where()
             .eq("id", eid)
             .disjunction()
@@ -282,7 +286,8 @@ public class EnrolmentController extends BaseController {
             Exam exam = possibleExam.get();
 
             // Find existing enrolments for exam and user
-            List<ExamEnrolment> enrolments = DB.find(ExamEnrolment.class)
+            List<ExamEnrolment> enrolments = DB
+                .find(ExamEnrolment.class)
                 .fetch("reservation")
                 .fetch("examinationEventConfiguration")
                 .fetch("examinationEventConfiguration.examinationEvent")
@@ -294,10 +299,9 @@ public class EnrolmentController extends BaseController {
                 .endOr()
                 .findList()
                 .stream()
-                .filter(
-                    ee ->
-                        (ee.getUser() != null && ee.getUser().equals(user)) ||
-                        (ee.getPreEnrolledUserEmail() != null && ee.getPreEnrolledUserEmail().equals(user.getEmail()))
+                .filter(ee ->
+                    (ee.getUser() != null && ee.getUser().equals(user)) ||
+                    (ee.getPreEnrolledUserEmail() != null && ee.getPreEnrolledUserEmail().equals(user.getEmail()))
                 )
                 .toList();
 
@@ -305,10 +309,8 @@ public class EnrolmentController extends BaseController {
             if (
                 enrolments
                     .stream()
-                    .anyMatch(
-                        e ->
-                            e.getExam().getImplementation() == Exam.Implementation.AQUARIUM &&
-                            e.getReservation() == null
+                    .anyMatch(e ->
+                        e.getExam().getImplementation() == Exam.Implementation.AQUARIUM && e.getReservation() == null
                     )
             ) {
                 return wrapAsPromise(forbidden("i18n_error_enrolment_exists"));
@@ -317,10 +319,9 @@ public class EnrolmentController extends BaseController {
             if (
                 enrolments
                     .stream()
-                    .anyMatch(
-                        e ->
-                            e.getExam().getImplementation() != Exam.Implementation.AQUARIUM &&
-                            e.getExaminationEventConfiguration() == null
+                    .anyMatch(e ->
+                        e.getExam().getImplementation() != Exam.Implementation.AQUARIUM &&
+                        e.getExaminationEventConfiguration() == null
                     )
             ) {
                 return wrapAsPromise(forbidden("i18n_error_enrolment_exists"));
@@ -338,24 +339,22 @@ public class EnrolmentController extends BaseController {
             if (
                 enrolments
                     .stream()
-                    .anyMatch(
-                        e ->
-                            e.getExaminationEventConfiguration() != null &&
-                            e
-                                .getExaminationEventConfiguration()
-                                .getExaminationEvent()
-                                .toInterval(e.getExam())
-                                .contains(dateTimeHandler.adjustDST(DateTime.now()))
+                    .anyMatch(e ->
+                        e.getExaminationEventConfiguration() != null &&
+                        e
+                            .getExaminationEventConfiguration()
+                            .getExaminationEvent()
+                            .toInterval(e.getExam())
+                            .contains(dateTimeHandler.adjustDST(DateTime.now()))
                     )
             ) {
                 return wrapAsPromise(forbidden("i18n_reservation_in_effect"));
             }
             List<ExamEnrolment> enrolmentsWithFutureReservations = enrolments
                 .stream()
-                .filter(
-                    ee ->
-                        ee.getReservation() != null &&
-                        ee.getReservation().toInterval().isAfter(dateTimeHandler.adjustDST(DateTime.now()))
+                .filter(ee ->
+                    ee.getReservation() != null &&
+                    ee.getReservation().toInterval().isAfter(dateTimeHandler.adjustDST(DateTime.now()))
                 )
                 .toList();
             if (enrolmentsWithFutureReservations.size() > 1) {
@@ -368,7 +367,7 @@ public class EnrolmentController extends BaseController {
             }
             // reservation in the future, replace it
             if (!enrolmentsWithFutureReservations.isEmpty()) {
-                ExamEnrolment enrolment = enrolmentsWithFutureReservations.get(0);
+                ExamEnrolment enrolment = enrolmentsWithFutureReservations.getFirst();
                 Reservation reservation = enrolment.getReservation();
                 return externalReservationHandler
                     .removeReservation(reservation, user, "")
@@ -380,10 +379,9 @@ public class EnrolmentController extends BaseController {
             }
             List<ExamEnrolment> enrolmentsWithFutureExaminationEvents = enrolments
                 .stream()
-                .filter(
-                    e ->
-                        e.getExaminationEventConfiguration() != null &&
-                        e.getExaminationEventConfiguration().getExaminationEvent().toInterval(e.getExam()).isAfterNow()
+                .filter(e ->
+                    e.getExaminationEventConfiguration() != null &&
+                    e.getExaminationEventConfiguration().getExaminationEvent().toInterval(e.getExam()).isAfterNow()
                 )
                 .toList();
             if (enrolmentsWithFutureExaminationEvents.size() > 1) {
@@ -396,13 +394,13 @@ public class EnrolmentController extends BaseController {
             }
             // examination event in the future, replace it
             if (!enrolmentsWithFutureExaminationEvents.isEmpty()) {
-                ExamEnrolment enrolment = enrolmentsWithFutureExaminationEvents.get(0);
+                ExamEnrolment enrolment = enrolmentsWithFutureExaminationEvents.getFirst();
                 enrolment.delete();
                 ExamEnrolment newEnrolment = makeEnrolment(exam, user);
                 return wrapAsPromise(ok(newEnrolment));
             }
             if (enrolments.size() == 1) {
-                ExamEnrolment enrolment = enrolments.get(0);
+                ExamEnrolment enrolment = enrolments.getFirst();
                 Reservation reservation = enrolment.getReservation();
                 if (
                     reservation != null &&
@@ -465,7 +463,8 @@ public class EnrolmentController extends BaseController {
                 return wrapAsPromise(badRequest("user not found"));
             }
         } else if (email.isPresent()) {
-            List<User> users = DB.find(User.class)
+            List<User> users = DB
+                .find(User.class)
                 .where()
                 .or()
                 .ieq("email", email.get())
@@ -475,7 +474,8 @@ public class EnrolmentController extends BaseController {
             if (users.isEmpty()) {
                 // Pre-enrolment
                 // Check that we will not create duplicate enrolments for same email address
-                List<ExamEnrolment> enrolments = DB.find(ExamEnrolment.class)
+                List<ExamEnrolment> enrolments = DB
+                    .find(ExamEnrolment.class)
                     .where()
                     .eq("exam.id", eid)
                     .ieq("preEnrolledUserEmail", email.get())
@@ -488,7 +488,7 @@ public class EnrolmentController extends BaseController {
                 }
             } else if (users.size() == 1) {
                 // User with email already exists
-                user = users.get(0);
+                user = users.getFirst();
             } else {
                 // Multiple users with same email -> not good
                 return wrapAsPromise(internalServerError("multiple users found for email"));
@@ -498,32 +498,34 @@ public class EnrolmentController extends BaseController {
         }
 
         final User sender = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        return doCreateEnrolment(eid, executionType, user).thenApplyAsync(result -> {
-            if (exam.getState() != Exam.State.PUBLISHED) {
+        return doCreateEnrolment(eid, executionType, user)
+            .thenApplyAsync(result -> {
+                if (exam.getState() != Exam.State.PUBLISHED) {
+                    return result;
+                }
+                if (result.status() != Http.Status.OK) {
+                    return result;
+                }
+                actor
+                    .scheduler()
+                    .scheduleOnce(
+                        Duration.create(1, TimeUnit.SECONDS),
+                        () -> {
+                            emailComposer.composePrivateExamParticipantNotification(user, sender, exam);
+                            logger.info("Exam participation notification email sent to {}", user.getEmail());
+                        },
+                        actor.dispatcher()
+                    );
                 return result;
-            }
-            if (result.status() != Http.Status.OK) {
-                return result;
-            }
-            actor
-                .scheduler()
-                .scheduleOnce(
-                    Duration.create(1, TimeUnit.SECONDS),
-                    () -> {
-                        emailComposer.composePrivateExamParticipantNotification(user, sender, exam);
-                        logger.info("Exam participation notification email sent to {}", user.getEmail());
-                    },
-                    actor.dispatcher()
-                );
-            return result;
-        });
+            });
     }
 
     @Authenticated
     @Restrict({ @Group("ADMIN"), @Group("TEACHER") })
     public Result removeStudentEnrolment(Long id, Http.Request request) {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        ExamEnrolment enrolment = DB.find(ExamEnrolment.class)
+        ExamEnrolment enrolment = DB
+            .find(ExamEnrolment.class)
             .where()
             .idEq(id)
             .ne("exam.executionType.type", ExamExecutionType.Type.PUBLIC.toString())
@@ -560,7 +562,8 @@ public class EnrolmentController extends BaseController {
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public Result addExaminationEventConfig(Long enrolmentId, Long configId, Http.Request request) {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        Optional<ExamEnrolment> oee = DB.find(ExamEnrolment.class)
+        Optional<ExamEnrolment> oee = DB
+            .find(ExamEnrolment.class)
             .where()
             .idEq(enrolmentId)
             .eq("user", user)
@@ -570,7 +573,8 @@ public class EnrolmentController extends BaseController {
             return notFound("enrolment not found");
         }
         ExamEnrolment enrolment = oee.get();
-        Optional<ExaminationEventConfiguration> optionalConfig = DB.find(ExaminationEventConfiguration.class)
+        Optional<ExaminationEventConfiguration> optionalConfig = DB
+            .find(ExaminationEventConfiguration.class)
             .fetch("examEnrolments")
             .where()
             .idEq(configId)
@@ -604,7 +608,8 @@ public class EnrolmentController extends BaseController {
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public Result removeExaminationEventConfig(Long enrolmentId, Http.Request request) {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        Optional<ExamEnrolment> oee = DB.find(ExamEnrolment.class)
+        Optional<ExamEnrolment> oee = DB
+            .find(ExamEnrolment.class)
             .where()
             .idEq(enrolmentId)
             .eq("user", user)
@@ -642,7 +647,8 @@ public class EnrolmentController extends BaseController {
         }
         ExaminationEvent event = config.getExaminationEvent();
         Exam exam = config.getExam();
-        Set<ExamEnrolment> enrolments = DB.find(ExamEnrolment.class)
+        Set<ExamEnrolment> enrolments = DB
+            .find(ExamEnrolment.class)
             .fetch("user")
             .where()
             .eq("examinationEventConfiguration.id", configId)
