@@ -93,7 +93,8 @@ public class CalendarHandlerImpl implements CalendarHandler {
                 return Results.notFound();
             }
             // users reservations starting from now
-            List<Reservation> reservations = DB.find(Reservation.class)
+            List<Reservation> reservations = DB
+                .find(Reservation.class)
                 .fetch("enrolment.exam")
                 .where()
                 .eq("user", user)
@@ -102,14 +103,14 @@ public class CalendarHandlerImpl implements CalendarHandler {
             // Resolve eligible machines based on software and accessibility requirements
             List<ExamMachine> machines = getEligibleMachines(room, aids, exam);
             // Maintenance periods
-            List<Interval> periods = DB.find(MaintenancePeriod.class)
+            List<Interval> periods = DB
+                .find(MaintenancePeriod.class)
                 .where()
                 .gt("endsAt", searchDate.toDate())
                 .findList()
                 .stream()
-                .map(
-                    p ->
-                        new Interval(normalizeMaintenanceTime(p.getStartsAt()), normalizeMaintenanceTime(p.getEndsAt()))
+                .map(p ->
+                    new Interval(normalizeMaintenanceTime(p.getStartsAt()), normalizeMaintenanceTime(p.getEndsAt()))
                 )
                 .toList();
             LocalDate endOfSearch = getEndSearchDate(searchDate, new LocalDate(exam.getPeriodEnd()));
@@ -129,7 +130,8 @@ public class CalendarHandlerImpl implements CalendarHandler {
         DateTimeZone dtz = DateTimeZone.forID(reservation.getMachine().getRoom().getLocalTimezone());
         LocalDate searchDate = dateTimeHandler.normalize(reservation.getStartAt().withZone(dtz), dtz).toLocalDate();
         // users reservations starting from now
-        List<Reservation> reservations = DB.find(Reservation.class)
+        List<Reservation> reservations = DB
+            .find(Reservation.class)
             .fetch("enrolment.exam")
             .where()
             .eq("user", reservation.getUser())
@@ -142,7 +144,8 @@ public class CalendarHandlerImpl implements CalendarHandler {
             reservation.getEnrolment().getExam()
         );
         // Maintenance periods
-        List<Interval> periods = DB.find(MaintenancePeriod.class)
+        List<Interval> periods = DB
+            .find(MaintenancePeriod.class)
             .where()
             .gt("endsAt", searchDate.toDate())
             .findList()
@@ -179,7 +182,7 @@ public class CalendarHandlerImpl implements CalendarHandler {
         LocalDate examEndDate = new DateTime(exam.getPeriodEnd()).plusMillis(offset).toLocalDate();
         LocalDate searchEndDate = reservationWindowDate.isBefore(examEndDate) ? reservationWindowDate : examEndDate;
         LocalDate examStartDate = new DateTime(exam.getPeriodStart()).plusMillis(startOffset).toLocalDate();
-        LocalDate searchDate = day.equals("") ? now : ISODateTimeFormat.dateTimeParser().parseLocalDate(day);
+        LocalDate searchDate = day.isEmpty() ? now : ISODateTimeFormat.dateTimeParser().parseLocalDate(day);
         searchDate = searchDate.withDayOfWeek(1);
         if (searchDate.isBefore(now)) {
             searchDate = now;
@@ -196,7 +199,8 @@ public class CalendarHandlerImpl implements CalendarHandler {
     }
 
     private List<ExamMachine> getEligibleMachines(ExamRoom room, Collection<Integer> access, Exam exam) {
-        List<ExamMachine> candidates = DB.find(ExamMachine.class)
+        List<ExamMachine> candidates = DB
+            .find(ExamMachine.class)
             .fetch("room")
             .where()
             .eq("room.id", room.getId())
@@ -302,7 +306,7 @@ public class CalendarHandlerImpl implements CalendarHandler {
                     continue;
                 } else {
                     // User has an existing reservation to this exam
-                    Reservation reservation = conflicting.get(0);
+                    Reservation reservation = conflicting.getFirst();
                     if (!reservation.toInterval().equals(slot)) {
                         // No matching slot found in this room, add the reservation as-is.
                         results.add(new TimeSlot(reservation.toInterval(), -1, null));
@@ -400,11 +404,9 @@ public class CalendarHandlerImpl implements CalendarHandler {
 
     @Override
     public int getReservationWindowSize() {
-        String reservationWindow = SettingsController.getOrCreateSettings(
-            "reservation_window_size",
-            null,
-            null
-        ).getValue();
+        String reservationWindow = SettingsController
+            .getOrCreateSettings("reservation_window_size", null, null)
+            .getValue();
         return reservationWindow != null ? Integer.parseInt(reservationWindow) : 0;
     }
 
@@ -426,7 +428,8 @@ public class CalendarHandlerImpl implements CalendarHandler {
             ArrayNode root = (ArrayNode) node;
             LocalDate searchDate = LocalDate.parse(date, ISODateTimeFormat.dateParser());
             // users reservations starting from now
-            List<Reservation> reservations = DB.find(Reservation.class)
+            List<Reservation> reservations = DB
+                .find(Reservation.class)
                 .fetch("enrolment.exam")
                 .where()
                 .eq("user", user)
@@ -448,14 +451,14 @@ public class CalendarHandlerImpl implements CalendarHandler {
                     LinkedHashMap::new
                 )
             );
-            List<Interval> periods = DB.find(MaintenancePeriod.class)
+            List<Interval> periods = DB
+                .find(MaintenancePeriod.class)
                 .where()
                 .ge("endsAt", searchDate.withDayOfWeek(DateTimeConstants.MONDAY).toDate())
                 .findList()
                 .stream()
-                .map(
-                    p ->
-                        new Interval(normalizeMaintenanceTime(p.getStartsAt()), normalizeMaintenanceTime(p.getEndsAt()))
+                .map(p ->
+                    new Interval(normalizeMaintenanceTime(p.getStartsAt()), normalizeMaintenanceTime(p.getEndsAt()))
                 )
                 .toList();
             // Filter out slots that overlap a local maintenance period
