@@ -235,7 +235,7 @@ class EmailComposerImpl implements EmailComposer {
             // Nothing useful to send
             return;
         }
-        logger.info("Sending weekly report to: " + teacher.getEmail());
+        logger.info("Sending weekly report to: {}", teacher.getEmail());
         String templatePath = getTemplatesRoot() + "weeklySummary/weeklySummary.html";
         String inspectionTemplatePath = getTemplatesRoot() + "weeklySummary/inspectionInfoSimple.html";
         String template = fileHandler.read(templatePath);
@@ -580,7 +580,8 @@ class EmailComposerImpl implements EmailComposer {
 
         Map<String, String> values = new HashMap<>();
 
-        List<Exam> exams = DB.find(Exam.class)
+        List<Exam> exams = DB
+            .find(Exam.class)
             .where()
             .eq("parent.id", exam.getId())
             .eq("state", Exam.State.REVIEW)
@@ -892,21 +893,23 @@ class EmailComposerImpl implements EmailComposer {
         if (exam.getState() == Exam.State.ABORTED) {
             templatePath = getTemplatesRoot() + "examAborted.html";
             subject = messaging.get(lang, templatePrefix + "exam.aborted.subject");
-            message = messaging.get(
-                lang,
-                templatePrefix + "exam.aborted.message",
-                String.format("%s %s <%s>", student.getFirstName(), student.getLastName(), student.getEmail()),
-                String.format("%s (%s)", exam.getName(), exam.getCourse().getCode().split("_")[0])
-            );
+            message =
+                messaging.get(
+                    lang,
+                    templatePrefix + "exam.aborted.message",
+                    String.format("%s %s <%s>", student.getFirstName(), student.getLastName(), student.getEmail()),
+                    String.format("%s (%s)", exam.getName(), exam.getCourse().getCode().split("_")[0])
+                );
         } else {
             templatePath = getTemplatesRoot() + "examEnded.html";
             subject = messaging.get(lang, templatePrefix + "exam.returned.subject");
-            message = messaging.get(
-                lang,
-                templatePrefix + "exam.returned.message",
-                String.format("%s %s <%s>", student.getFirstName(), student.getLastName(), student.getEmail()),
-                String.format("%s (%s)", exam.getName(), exam.getCourse().getCode().split("_")[0])
-            );
+            message =
+                messaging.get(
+                    lang,
+                    templatePrefix + "exam.returned.message",
+                    String.format("%s %s <%s>", student.getFirstName(), student.getLastName(), student.getEmail()),
+                    String.format("%s (%s)", exam.getName(), exam.getCourse().getCode().split("_")[0])
+                );
             String reviewLinkUrl = String.format("%s/staff/assessments/%d", hostName, exam.getId());
             String reviewLinkText = messaging.get(lang, "email.template.exam.returned.link");
             stringValues.put("review_link", reviewLinkUrl);
@@ -1060,7 +1063,8 @@ class EmailComposerImpl implements EmailComposer {
     private String createEnrolmentBlock(User teacher, Lang lang) {
         String enrolmentTemplatePath = getTemplatesRoot() + "weeklySummary/enrollmentInfo.html";
         String enrolmentTemplate = fileHandler.read(enrolmentTemplatePath);
-        List<Exam> exams = DB.find(Exam.class)
+        List<Exam> exams = DB
+            .find(Exam.class)
             .fetch("course")
             .fetch("examEnrolments")
             .fetch("examEnrolments.reservation")
@@ -1087,12 +1091,13 @@ class EmailComposerImpl implements EmailComposer {
                 String subTemplate;
                 if (t._2.isEmpty()) {
                     String noEnrolments = messaging.get(lang, "email.enrolment.no.enrolments");
-                    subTemplate = String.format(
-                        "<li><a href=\"{{exam_link}}\">{{exam_name}} - {{course_code}}</a>: %s</li>",
-                        noEnrolments
-                    );
+                    subTemplate =
+                        String.format(
+                            "<li><a href=\"{{exam_link}}\">{{exam_name}} - {{course_code}}</a>: %s</li>",
+                            noEnrolments
+                        );
                 } else {
-                    ExamEnrolment first = t._2.get(0);
+                    ExamEnrolment first = t._2.getFirst();
                     DateTime date = first.getReservation() != null
                         ? adjustDST(first.getReservation().getStartAt())
                         : new DateTime(
@@ -1112,7 +1117,8 @@ class EmailComposerImpl implements EmailComposer {
 
     // return exams in review state where teacher is either owner or inspector
     private static List<ExamParticipation> getReviews(User teacher) {
-        return DB.find(ExamParticipation.class)
+        return DB
+            .find(ExamParticipation.class)
             .fetch("exam.course")
             .where()
             .disjunction()
